<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        app:defaultValue="true"
        app:key="pref_autoconnect"
        app:summary="@string/pref_autoconnect_summary"
        app:title="@string/pref_autoconnect" />

    <Preference
        app:summary="@string/manual_connection_summary"
        app:title="@string/manual_connection">

        <intent android:action="pw.thedrhax.mosmetro.activities.DebugActivity" />
    </Preference>

    <Preference
        app:summary="@string/view_log_summary"
        app:title="@string/view_log">

        <intent android:action="pw.thedrhax.mosmetro.activities.DebugActivity">
            <extra android:name="view_only" android:value="true" />
        </intent>
    </Preference>

    <Preference
        app:key="pref_shortcut"
        app:summary="@string/manual_connection_shortcut_summary"
        app:title="@string/manual_connection_shortcut">

        <intent android:action="pw.thedrhax.mosmetro.activities.ShortcutActivity" />
    </Preference>

    <PreferenceCategory
        app:key="pref_category_main"
        app:title="@string/pref_category_main">

        <Preference
            app:fragment="pw.thedrhax.mosmetro.activities.SettingsActivity$ConnectionSettingsFragment"
            app:key="pref_conn"
            app:summary="@string/pref_category_connection_summary"
            app:title="@string/pref_category_connection" />

        <Preference
            app:fragment="pw.thedrhax.mosmetro.activities.SettingsActivity$NotificationSettingsFragment"
            app:key="pref_notify"
            app:summary="@string/pref_category_notifications_summary"
            app:title="@string/pref_category_notifications" />

        <Preference
            app:fragment="pw.thedrhax.mosmetro.activities.SettingsActivity$DebugSettingsFragment"
            app:key="pref_debug"
            app:summary="@string/pref_debug_summary"
            app:title="@string/pref_debug" />

        <Preference
            app:fragment="pw.thedrhax.mosmetro.activities.SettingsActivity$ThemesSettingsFragment"
            app:key="pref_themes"
            app:summary="@string/pref_themes_summary"
            app:title="@string/pref_themes" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_updater">

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="pref_updater_enabled"
            app:summary="@string/pref_updater_enabled_summary"
            app:title="@string/pref_updater_enabled" />

        <Preference
            app:key="pref_updater_check"
            app:summary="@string/pref_updater_check_summary"
            app:title="@string/pref_updater_check" />

        <Preference
            app:defaultValue="@string/build_branch_name"
            app:enabled="false"
            app:key="pref_updater_branch"
            app:summary="@string/pref_updater_branch_summary"
            app:title="@string/pref_updater_branch" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:icon="@drawable/ic_launcher"
            app:key="app_name"
            app:title="@string/app_name" />

        <Preference
            app:fragment="pw.thedrhax.mosmetro.activities.SettingsActivity$AboutFragment"
            app:key="pref_about"
            app:summary="@string/more_information_summary"
            app:title="@string/more_information" />

    </PreferenceCategory>

</PreferenceScreen>